# appizer-ona

./: Dockerfile  config.yaml  entrypoint.sh  notes.md  run.sh
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/api/appize/: route.ts
client/src/app/api/create-archive/: route.ts
client/src/app/api/download-artifact/: route.ts
client/src/app/api/upload-files/: route.ts
client/src/app/test/: page.tsx
client/src/components/: AdvancedConfigEditor.tsx  BackendStatus.tsx  BuildParametersDialog.tsx  BuildProgressModal.tsx  ConfigEditor.tsx  FieldRenderer.tsx  FileUploadField.tsx  FileUploadStatus.tsx  SectionRenderer.tsx  SimpleNativeTest.tsx
client/src/configs/: defaultEditor.ts
client/src/funcs/: yaml_geneator.ts
client/src/lib/: backend-client.ts  codespace-automation.ts  file-manager.ts
client/src/types/: backend-config.ts  main.ts
client/src/utils/: main.ts
example-app/: run.sh
example-app/app/src/webapp/: index.html
generator/: config_loader.py  default_config.yaml  main.py
generator/modifiers/: android.py  windows.py
generator/utils/android/: logo.py
generator/utils/ios/: splash_screen.py
lib/: Dockerfile  entrypoint.sh
lib/generator/: default_config.yaml  main.py
lib/generator/modifiers/: android.py  ios.py  linux.py  macos.py  windows.py
lib/generator/utils/: config_loader.py  file_operations.py  main.py
lib/generator/utils/android/: file_actions.py  splash_screen.py
lib/generator/utils/ios/: file_actions.py
lib/generator/utils/windows/: logo.py
lib/template-app/android/: debug.keystore  gradle.properties
lib/template-app/android/app/: build.gradle
lib/template-app/android/app/src/main/res/values/: colors.xml
lib/template-app/windows/src-tauri/: Cargo.toml
lib/template-app/windows/src-tauri/src/: main.rs
lib/template-app/windows/wails_app/: go.mod  main.go  wails.json
lib/template-app/windows/wails_app/frontend/: index.html
starter-app/: config.yaml  run.sh
starter-app/output/: app-release.apk
template-app/: gradle.properties  settings.gradle
template-app/android/: build.gradle
template-app/android/app/: build.gradle  progaurd-rules.pro
template-app/android/app/src/main/: AndroidManifest.xml
template-app/android/app/src/main/java/com/example/app/: SplashActivity.java
template-app/app/: build.gradle
template-app/app/src/main/java/com/example/app/: SplashActivity.java
template-app/gradle/wrapper/: gradle-wrapper.properties
template-app/windows/: .gitignore  Cargo.toml
template-app/windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+2 files in other folders)
