[package]
name = "my-webview-app" # Placeholder for app_name, will be replaced
version = "0.1.0"      # Placeholder for version, will be replaced
description = "A lightweight WebView app powered by Tauri."
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]