# Ref https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "{{PACKAGE_NAME}}" # Placeholder for package name, will be replaced
version = "0.1.0"      # Placeholder for version, will be replaced
description = "A lightweight WebView app powered by Tauri."
authors = ["{{AUTHOR}}"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0"  }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]